# diabetes-prediction

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
diabetes_prediction/: _utils.py  app.py  main.ipynb  main.py
diabetes_prediction/common/: config.py  env.py  timer.py  utils.py
diabetes_prediction/deprecated_notebooks/: EDA.ipynb  EDA2.ipynb  EDA_sample_child.ipynb  base-model.ipynb  generate_dataset.ipynb  preprocessing.ipynb
diabetes_prediction/pages/: __init__.py  tab0.py  tab1.py  tab2.py  tab3.py
diabetes_prediction/utils/app/: io.py
diabetes_prediction/utils/data/: __init__.py  dataloader.py  feature_selection.py  metrics.py  modeling.py  preprocessing.py
